--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --host my.localhost.com"
+    "start": "webpack-dev-server --config ./webpack.config.js --host my.localhost.com",
+    "build": "webpack --config ./webpack.prod.config.js"
   },
   "babel": {
     "presets": [
@@ -16,21 +17,24 @@
   "author": "Sergey Shakur",
   "license": "ISC",
   "dependencies": {
-    "fetch": "^1.1.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.2.2"
+    "fetch": "^1.1.0"
   },
   "devDependencies": {
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "html-webpack-plugin": "^2.30.1",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.5",
-    "style-loader": "^0.18.2"
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^1.1.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.5"
   }
 }
