--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --config ./webpack.config.js --hot --host my.localhost.com",
+    "start": "webpack-dev-server --mode development --config ./webpack.config.js --host my.localhost.com",
     "build": "webpack --mode production --config ./webpack.prod.config.js"
   },
   "babel": {
