--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "fetch": "^1.1.0",
-    "npm": "^5.7.1"
+    "npm": "^5.7.1",
+    "react-animate-height": "^1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
