--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "fetch": "^1.1.0",
-    "npm": "^6.14.4",
-    "react-animate-height": "^1.0.2"
+    "npm": "^6.14.5",
+    "react-animate-height": "^2.0.21"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -28,16 +28,17 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
+    "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^3.0.6",
-    "mini-css-extract-plugin": "^0.2.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
+    "react-use": "^14.2.0",
     "regenerator-runtime": "^0.13.5",
     "style-loader": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^1.2.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
