--- a/package.json
+++ b/package.json
@@ -2,17 +2,10 @@
   "name": "quest-reactjs",
   "version": "1.0.0",
   "description": "A simple web-app for creating quests",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --config ./webpack.config.js --host my.localhost.com",
+    "start": "webpack-dev-server --mode development --config webpack.config.ts --host my.localhost.com",
     "build": "webpack --mode production --config ./webpack.prod.config.js"
-  },
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ]
   },
   "author": "Sergey Shakur",
   "license": "ISC",
@@ -22,25 +15,58 @@
     "react-animate-height": "^2.0.21"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^3.5.3",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@types/classnames": "^2.2.10",
+    "@types/html-webpack-plugin": "^3.2.2",
+    "@types/mini-css-extract-plugin": "^0.9.1",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/webpack": "^4.41.12",
+    "@types/webpack-dev-server": "^3.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-use": "^14.2.0",
-    "regenerator-runtime": "^0.13.5",
-    "style-loader": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "typescript": "^3.9.3",
+    "ts-node": "^8.10.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "babel-loader": "^8.1.0",
+    "style-loader": "^1.2.1",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "react-hot-loader": "^4.12.21",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "uglifyjs-webpack-plugin": "^2.2.0"
+  },
+  "engines": {
+    "node": "^14.3"
+  },
+  "browserslist": [
+    "last 1 chrome version",
+    "last 1 firefox version"
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-typescript",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "react-hot-loader/babel",
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-nullish-coalescing-operator",
+      "@babel/plugin-proposal-optional-chaining"
+    ]
   }
 }
