--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --config webpack.config.ts --host my.localhost.com",
-    "build": "webpack --mode production --config ./webpack.prod.config.js"
+    "build": "webpack --mode production --config ./webpack.prod.config.ts"
   },
   "author": "Sergey Shakur",
   "license": "ISC",
@@ -16,10 +16,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@types/classnames": "^2.2.11",
     "@types/html-webpack-plugin": "^3.2.2",
     "@types/mini-css-extract-plugin": "^1.2.0",
@@ -30,24 +30,23 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/webpack": "^4.41.12",
     "@types/webpack-dev-server": "^3.10.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-use": "^15.3.4",
-    "typescript": "^4.0.5",
-    "ts-node": "^9.0.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
     "babel-loader": "^8.1.0",
-    "style-loader": "^2.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
-    "react-hot-loader": "^4.13.0",
-    "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "react-router-dom": "^5.2.0",
+    "react-use": "^15.3.4",
+    "style-loader": "^2.0.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "engines": {
     "node": "^14.3"
