--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple web-app for creating quests",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --config webpack.config.ts --host my.localhost.com",
+    "start": "webpack-dev-server --mode development --config webpack.config.ts --host my.localhost.com --port 8081 --hot",
     "build": "webpack --mode production --config ./webpack.prod.config.ts"
   },
   "author": "Sergey Shakur",
@@ -21,20 +21,20 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@types/classnames": "^2.2.11",
-    "@types/html-webpack-plugin": "^3.2.2",
+    "@types/html-webpack-plugin": "^3.2.4",
     "@types/mini-css-extract-plugin": "^1.2.0",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
-    "@types/webpack": "^4.41.12",
-    "@types/webpack-dev-server": "^3.10.1",
+    "@types/webpack": "^4.41.24",
+    "@types/webpack-dev-server": "^3.11.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -42,11 +42,11 @@
     "react-router-dom": "^5.2.0",
     "react-use": "^15.3.4",
     "style-loader": "^2.0.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^4.0.0-beta.0"
   },
   "engines": {
     "node": "^14.3"
