--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "fetch": "^1.1.0",
     "npm": "^6.14.5",
-    "react-animate-height": "^2.0.23"
+    "react-animate-height": "^2.0.23",
+    "react-markdown": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
