--- a/package.json
+++ b/package.json
@@ -2,45 +2,74 @@
   "name": "quest-reactjs",
   "version": "1.0.0",
   "description": "A simple web-app for creating quests",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --config ./webpack.config.js --host my.localhost.com",
-    "build": "webpack --mode production --config ./webpack.prod.config.js"
-  },
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ]
+    "start": "webpack-dev-server --mode development --config webpack.config.ts --host my.localhost.com --port 8081 --hot",
+    "build": "webpack --mode production --config ./webpack.prod.config.ts"
   },
   "author": "Sergey Shakur",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "fetch": "^1.1.0",
     "npm": "^6.14.5",
-    "react-animate-height": "^2.0.21"
+    "react-animate-height": "^2.0.23",
+    "react-markdown": "^5.0.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^3.5.3",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/classnames": "^2.2.11",
+    "@types/html-webpack-plugin": "^3.2.4",
+    "@types/mini-css-extract-plugin": "^1.2.0",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/webpack": "^4.41.24",
+    "@types/webpack-dev-server": "^3.11.1",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
-    "react-use": "^14.2.0",
-    "regenerator-runtime": "^0.13.5",
-    "style-loader": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "react-use": "^15.3.4",
+    "style-loader": "^2.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^4.0.0-beta.0"
+  },
+  "engines": {
+    "node": "^14.3"
+  },
+  "browserslist": [
+    "last 1 chrome version",
+    "last 1 firefox version"
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-typescript",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "react-hot-loader/babel",
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-nullish-coalescing-operator",
+      "@babel/plugin-proposal-optional-chaining"
+    ]
   }
 }
